# rule-based-interpreter

./: Analisis.h  And.h  CMakeLists.txt  Comparacion.h  Condicion.h  Entrada.h  Hecho.h  Interprete.h  Lexer.h  NodoRule.h  Parser.h  Programa.h  README.md  main.cpp
